test/compile-fail/resolution/use/no-name-group/expected.txt
error: unresolved item `c`
  ┌─ ./test/compile-fail/resolution/use/no-name-group/top.rhdl:5:12
  │
5 │ use a::{b, c, self};
  │            ^ no `c` item in `a`

